--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
         "@types/node": "20.12.6",
         "@types/react": "18.2.75",
         "@types/react-dom": "^18.2.4",
+        "autoprefixer": "^10.4.19",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
+        "postcss": "^8.4.38",
+        "tailwindcss": "^3.4.3",
         "ts-node": "^10.9.2",
         "typescript": "4.5.4"
     }
