--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "test:coverage": "jest --coverage"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^2.2.3",
+        "react-redux": "^9.1.0",
         "next": "latest",
         "next-pwa": "^5.6.0",
         "react": "^18.2.0",
