--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
+        "lint": "next lint",
         "test": "jest",
         "test:watch": "jest --watchAll",
         "test:coverage": "jest --coverage"
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.2.3",
-        "react-redux": "^9.1.0",
         "next": "latest",
         "next-pwa": "^5.6.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-redux": "^9.1.0"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^5.16.5",
@@ -24,11 +25,13 @@
         "@types/react": "18.2.75",
         "@types/react-dom": "^18.2.4",
         "autoprefixer": "^10.4.19",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.3",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
         "postcss": "^8.4.38",
         "tailwindcss": "^3.4.3",
         "ts-node": "^10.9.2",
-        "typescript": "4.5.4"
+        "typescript": "5.5.0"
     }
 }
