--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
         "next-pwa": "^5.6.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-redux": "^9.1.0"
+        "react-redux": "^9.1.0",
+        "rxdb": "^14.17.1",
+        "rxjs": "^7.8.1"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^5.16.5",
@@ -32,6 +34,6 @@
         "postcss": "^8.4.38",
         "tailwindcss": "^3.4.3",
         "ts-node": "^10.9.2",
-        "typescript": "5.5.0"
+        "typescript": "5.4.5"
     }
 }
