--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.0",
         "rxdb": "^14.17.1",
-        "rxjs": "^7.8.1"
+        "rxjs": "^7.8.1",
+        "ulid": "^2.3.0"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^5.16.5",
