--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "ulid": "^2.3.0"
     },
     "devDependencies": {
+        "@playwright/test": "^1.44.1",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^14.0.0",
         "@types/jest": "^29.5.1",
