--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "lint": "next lint",
         "test": "jest",
         "test:watch": "jest --watchAll",
-        "test:coverage": "jest --coverage"
+        "test:coverage": "jest --coverage",
+        "test:all": "playwright test && jest"
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.2.3",
