Mostly working e2e tests
TODO
- slight failure to fix (inconsistency between browsers)
- no whitespace in fields
- do snapshot test in this test?

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "test": "jest",
         "test:watch": "jest --watchAll",
         "test:coverage": "jest --coverage",
-        "test:all": "playwright test && jest"
+        "test:all": "playwright test && jest",
+        "playwright": "playwright test"
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.2.3",
