--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.2.3",
+        "lodash": "^4.17.21",
         "next": "latest",
         "next-pwa": "^5.6.0",
         "react": "^18.2.0",
@@ -27,6 +28,7 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^14.0.0",
         "@types/jest": "^29.5.1",
+        "@types/lodash": "^4",
         "@types/node": "20.12.6",
         "@types/react": "18.2.75",
         "@types/react-dom": "^18.2.4",
